--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
             <p class="slider__text">Joan</p>
             <ul class="slider__list">
               <li class="slider__list_element">Gay</li>
-              <li class="slider__list_element">Usuario gratis de <a href="https://www.google.com/url?sa=t&source=web&rct=j&opi=89978449&url=https://es.pornhub.com/&ved=2ahUKEwi9-47NjdiDAxXzEkQIHTZOA-oQFnoECAUQAQ&usg=AOvVaw1dhA39z_vJqwysXB97rFVs">pornhub</a></li>
+              <li class="slider__list_element">Usuario gratis de <a href="https://es.pornhub.com">pornhub</a></li>
               <li class="slider__list_element">Aficionado de minecraft</li>
               <li class="slider__list_element">Malo en pvp</li>
               <li class="slider__list_element">Sin consola (usuario de movil)</li>
