Se anadio el formulario

--- a/index.html
+++ b/index.html
@@ -226,6 +226,33 @@
     
   </article>
 
+  <section class="gg-form">
+    <h1 class="gg-form-title">Queremos saber que opinas</h1>
+    <p class="gg-form-paragraph">Para enviar el formulario dale click a enviar, luego espera a que cargue y completa el captcha. Al ser enviado seras notificado en pantalla.</p>
+      <form action="https://formsubmit.co/your@email.com" class="gg-form-main" method="post">
+        <label for="nombre" class="gg-form-label">
+          <span class="gg-form-labeltitle">Nombre</span>
+          <input required type="text" name="nombre" id="nombre" class="gg-form-input input-text" placeholder="Ingresa tu nombre aqui">
+        </label>
+
+          <label for="sex" class="gg-form-label">
+            <span class="gg-form-labeltitle">Elige tu genero</span>
+            <span class="gg-form-labeltitle">Hombre</span>
+          <input type="radio" name="sex" id="sex" value="male" class="gg-form-input">
+          <span class="gg-form-labeltitle">Mujer</span>  
+          <input type="radio" name="sex" id="sex" value="female" class="gg-form-input">
+        </label>
+
+
+        <label for="opinion" class="gg-form-label">
+          <textarea name="opinion" id="opinion" cols="30" rows="10" placeholder="Ingresa tu opinion aqui" class="gg-form-input"></textarea>
+        </label>
+        <label for="submit" class="gg-form-label">
+          <button type="submit" class="gg-form-button" name="submit" id="submit">Enviar formulario</button>
+        </label>
+      </form>
+  </section>
+
     <div class="easterEggs">
       <button class="invisble easter-egg-1-b nr"><a target="_blank" href="https://api.whatsapp.com/send?phone=523322109583&text=Hola, quieres follar, tengo casa sola 😏😍">Mandale un ms al que te asusto!😏</a></button>
       <img src="easterEggJesus.jpg" alt="" class="easter-egg-1-img invisible">
