--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
   <section class="gg-form">
     <h1 class="gg-form-title">Queremos saber que opinas</h1>
     <p class="gg-form-paragraph">Para enviar el formulario dale click a enviar, luego espera a que cargue y completa el captcha. Al ser enviado seras notificado en pantalla.</p>
-      <form action="https://formsubmit.co/your@email.com" class="gg-form-main" method="post">
+      <form action="https://formsubmit.co/aaronchavez966@gmail.com" class="gg-form-main" method="post">
         <label for="nombre" class="gg-form-label">
           <span class="gg-form-labeltitle">Nombre</span>
           <input required type="text" name="nombre" id="nombre" class="gg-form-input input-text" placeholder="Ingresa tu nombre aqui">
