--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
     <p class="contenido__texto test-item3">
       El gugutata es un grupo de WhatsApp hecho por amigos para pasar el rato riedo, conversando o para ponerse de a cuerdo para jugar.
     </p>
+    <a href='https://packfinder.netlify.app'>Buscador de packs 😏😏</a>
   </section>
 
   <section class="contenido" id="Normas">
